<resources>
    <string name="app_name">My First App</string>
    <string name="hello_world_text">Week 2 Assignment - Hello World!</string>
    <string name="added_text">Week 2 Assignment - Added TextView</string>
    <string name="back_button">Go Back to the Beginning</string>
    <string name="toast_button">Toast Button, Cheers!</string>
    <string name="reset_button">Reset</string>
    <string name="increment_button">Increment</string>
    <string name="decrement_button">Decrement</string>
    <string name="count_text">Starting count is 0</string>
    <string name="food_button">Feed Me!</string>
    <string name="touch_button">Don\'t Touch Me!</string>
    <string name="calm_shiba">calm shiba inu</string>
    <string name="week_3_button">Week 3 Assignments</string>
    <string name="week_4_button">Week 4 Assignments</string>
    <string name="recycler_view_button">Go to first RecyclerView</string>
    <string name="back_week_4_button">Go Back to Week 4</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="list_button">See a list of pinball machines at Coindexter\'s</string>

    <!--
    Accidentally created a new basic activity for week 3 instead of a blank activity
    Strings used for fragments for navigation
    -->
    <string name="title_activity_week3">Week3Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
